--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -21,6 +21,12 @@
     display: none;
     width: 6rem;
     height: 6rem;
+    align-self: flex-end;
+}
+
+.header nav label{
+    display: flex;
+    flex-direction: column;
 }
 
 .header .hamburguer{
@@ -28,7 +34,7 @@
     position: relative;
     display: block;
     width: 3rem;
-    height: 2rem;
+    height: 0.2rem;
     top: 2.9rem;
     left: 1.5rem;
     transition: 0.5s ease-in-out;
@@ -87,7 +93,7 @@
     header nav{
         position: absolute;
         top: 0.8rem;
-        right: 0;
+        right: 2rem;
         z-index: 1;
     }
 
@@ -95,6 +101,12 @@
         width: 20rem;
         background-color: #fff;
         padding: 2rem;
+    }
+
+    .header nav ul a{
+        text-align: center;
+        padding: 2rem;
+        display: block;
     }
 }
 
