--- a/src/css/style.css
+++ b/src/css/style.css
@@ -66,15 +66,15 @@ body{
     position: absolute;
     height: 3.5rem;
     bottom: 4rem;
-    animation: downarrow 0.6s infinite alternate ease-in-out;
+    animation: downArrow 0.6s infinite alternate ease-in-out;
 }
 
-@-webkit-keyframes downarrow{
+@-webkit-keyframes downArrow{
     0% {-webkit-transform: translateY(0); opacity: 0.4}
     100% {-webkit-transform: translateY(0.4em); opacity: 0.9;}
 }
 
-@media(max-widht: 425px){
+@media(max-width: 425px){
     .hero{
         height: 60vh;
     }
@@ -112,9 +112,9 @@ body{
     font-weight: 400;
     font-size: 1.8rem;
     margin: 3rem 0;
-}
+}  
 
-.about ,image{
+.about .image{
     height: 100%;
     width: 100%;
 }
@@ -138,7 +138,7 @@ body{
     background-size: cover;
 }
 
-@media (max-widht: 425px){
+@media (max-width: 425px){
     .about .item{
         text-align: center;
     }
@@ -153,16 +153,127 @@ body{
 
 .services{
     grid-area: services;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    text-align: center;
+}
+
+.services .service{
+    padding: 7rem 2rem;
+}
+
+.services .service img{
+    width: 25rem;
+    margin-bottom: 3rem;
+}
+
+.services .service h3{
+    font-size: 1.8rem;
+    font-weight: 700;
+}
+
+.services .service p{
+    font-size: 2rem;
+    font-weight: 400;
+    max-width: 40rem;
+    margin: 2rem auto;
+    line-height: 2.5rem;
+}
+
+.services .service:nth-child(1){
+    background-color: #9fe7f5;
+}
+
+.services .service:nth-child(2){
+    background-color: #fd97a3;
+}
+
+@media (max-width: 425px){
+    .services{
+        grid-template-columns: 1fr;
+    }
 }
 
 /* Projects*/
 
 .projects{
     grid-area: projects;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+}
+
+.projects img{
+    height: 100%;
+    transition: 0.3s;
+}
+
+.projects a:hover img{
+    opacity: 0.8;
+}
+
+@media (max-width: 768px){
+    .projects{
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+    }
+}
+
+@media (max-width: 425px){
+    .projects{
+        grid-template-columns: 1fr;
+        grid-template-rows:repeat(4, 1fr);
+    }
 }
 
 /* Footer*/
 
 .footer{
     grid-area: footer;
+    display: flex;
+    background-color: #90ee90;
+    flex-direction: column;
+    text-align: center;
+    padding: 10rem 0;
+}
+
+.footer h4{
+    font-weight: 700;
+    font-size: 2.5rem;
+    margin-bottom: 2rem;
+}
+
+.footer nav{
+    margin: 5rem 0;
+}
+
+.footer ul{
+    display: flex;
+    justify-content: center;
+    max-width: 320rem;
+    margin: 0 auto;
+}
+
+.footer nav ul li a{
+    font-weight: 500;
+    font-size: 2rem;
+    margin: 2rem;
+    transition: 0.3S;
+}
+
+.footer nav ul li a:hover{
+    font-weight: 700;
+    color: #FFF;
+}
+
+.footer .social i{
+    font-size: 2rem;
+    transition: 0.3s;
+}
+
+.footer .social a{
+    margin: 2rem;
+}
+
+.footer .social i:hover{
+    color: #FFF;
 }
