--- a/src/css/style.css
+++ b/src/css/style.css
@@ -263,6 +263,9 @@ body{
 .footer nav ul li a:hover{
     font-weight: 700;
     color: #FFF;
+    border: #fff 1px solid;
+    border-radius: 5rem;
+    padding: 0.5rem;
 }
 
 .footer .social i{
